# django-nav-spec

./: README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  test.yml
src/nav_spec/: __init__.py  context_processors.py
tests/: _test_integration.py  settings.py  test_integration.py  test_unit.py  urls.py  views.py
