[project]
name = "django-nav-spec"
dynamic = ["version"]
description = "Define your navigation in settings and simplify your templates."
readme = "README.md"
authors = [
    { name = "Ben Cardy", email = "me@bencardy.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nav_spec"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"
